# co2mon-ha-mqtt

./: CMakeLists.txt  README.md
co2mon-ha-mqtt/: CMakeLists.txt
co2mon-ha-mqtt/src/: main.c
co2mond/: CMakeLists.txt
debian/: changelog  co2mon-ha-mqtt.init  control
libco2mon/: CMakeLists.txt
libco2mon/src/: co2mon.c
